--- a/frontend/src/components/main.css
+++ b/frontend/src/components/main.css
@@ -3,6 +3,6 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 50vh;
+      min-height: 100%;
       margin: 0;
   }
