atualizando lista usuarios
atualizando lista usuarios

--- a/frontend/src/pages/usuarios/lista_usuarios.css
+++ b/frontend/src/pages/usuarios/lista_usuarios.css
@@ -282,6 +282,9 @@
     color: #ffffff;
   }
   
+  .icone-olho{
+    color: purple;
+  }
   /* ================= ANIMAÇÕES ================= */
   
   @keyframes fadeIn {
