--- a/frontend/src/pages/usuarios/lista_usuarios.css
+++ b/frontend/src/pages/usuarios/lista_usuarios.css
@@ -285,6 +285,16 @@
   .icone-olho{
     color: purple;
   }
+
+  .tabela-detalhes {
+    width: 100%;
+    font-size: 0.95em;
+    color: #444;
+    background-color: #f1f1f1;
+    padding: 10px;
+    border-radius: 8px;
+  }
+  
   /* ================= ANIMAÇÕES ================= */
   
   @keyframes fadeIn {
