--- a/frontend/src/pages/usuarios/lista_usuarios.css
+++ b/frontend/src/pages/usuarios/lista_usuarios.css
@@ -104,6 +104,11 @@
   .linha-impar {
     background-color: #ffffff;
   }
+
+  .linha-detalhes td {
+    position: relative;
+    padding-top: 40px; /* espaço pro olho flutuante */
+  }
   
   /* Botão de cadastro */
   
@@ -147,6 +152,7 @@
     padding: 0;
     cursor: pointer;
   }
+
   
   /* Ícones de ação (editar e excluir) */
   .acoes-icones {
