mais algumas pequenas alteracoes na lista de usuarios

--- a/frontend/src/pages/usuarios/lista_usuarios.css
+++ b/frontend/src/pages/usuarios/lista_usuarios.css
@@ -288,8 +288,8 @@
     color: #ffffff;
   }
   
-  .icone-olho{
-    color: purple;
+  .botao-icone {
+    color: black;
   }
 
   .tabela-detalhes {
