--- a/frontend/src/components/footer.css
+++ b/frontend/src/components/footer.css
@@ -1,6 +1,6 @@
 
   footer{
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   background-color:var(--verde-escuro);
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 15px 10px;
   margin-top: auto;
   }
 
