--- a/frontend/src/components/main.css
+++ b/frontend/src/components/main.css
@@ -3,6 +3,11 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100%;
+      height: 100%;
       margin: 0;
+  }
+  
+ .container {
+    padding: 20px;
+    flex: 1;
   }
