--- a/frontend/src/pages/motivos/abono/abono.css
+++ b/frontend/src/pages/motivos/abono/abono.css
@@ -89,6 +89,14 @@ h2 {
   text-align: left;
 }
 
+.tabela-motivos td {
+  padding: 2px 6px;
+  line-height: 1.1;
+  height: auto;
+  min-height: 0;
+  vertical-align: middle;
+}
+
 .tabela-motivos th {
   background-color: #e0e0e0;
 }
