--- a/frontend/src/pages/disciplinas/disciplina.css
+++ b/frontend/src/pages/disciplinas/disciplina.css
@@ -83,7 +83,13 @@
     padding: 10px;
     text-align: left;
   }
-  
+  .tabela-disciplinas td {
+    padding: 2px 6px;
+    line-height: 1.1;
+    height: auto;
+    min-height: 0;
+    vertical-align: middle;
+  }
   .tabela-disciplinas th {
     background-color: #e0e0e0;
   }
