--- a/frontend/src/pages/ppcs/ppc.css
+++ b/frontend/src/pages/ppcs/ppc.css
@@ -56,6 +56,14 @@
   text-align: left;
 }
 
+.tabela-ppc td {
+  padding: 2px 6px;
+  line-height: 1.1;
+  height: auto;
+  min-height: 0;
+  vertical-align: middle;
+}
+
 .tabela-ppc th {
   background-color: #e0e0e0;
 }
