# 59 e  #61 - telas cadastrar e atualizar usuários prontas - incluindo validacoes dos models e destaque em vermelho e letra em vermelho e negrito

--- a/frontend/src/components/layout-cruds.css
+++ b/frontend/src/components/layout-cruds.css
@@ -276,3 +276,15 @@
   .icone-olho {
     color: black;
   }
+
+  .input-error {
+    border: 2px solid red;
+    outline: none;
+  }
+
+  .error-text {
+    color: red;
+    font-weight: bold;
+    margin-top: 4px;
+  }
+  
