--- a/frontend/src/components/base/header_nav.css
+++ b/frontend/src/components/base/header_nav.css
@@ -77,13 +77,13 @@
   object-fit: cover;
 }
 
-.settings-link {
+.configuracoes-link {
   text-decoration: none;
   color: white;
   font-size: 14px;
 }
 
-.settings-link:hover {
+.configuracoes-link:hover {
   text-decoration: underline;
 }
 
