--- a/frontend/src/components/base/main.css
+++ b/frontend/src/components/base/main.css
@@ -6,4 +6,14 @@
       height: 100%;
       margin: 0;
   }
+
+  main.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: calc(100vh - 80px); /* Ajuste conforme a altura real do header */
+    text-align: center;
+    flex-direction: column;
+    padding: 2rem;
+  }
   
