--- a/frontend/src/components/formulario.css
+++ b/frontend/src/components/formulario.css
@@ -102,7 +102,8 @@
     }
   }
   
-/*Caixa da data*/
+  /*CALENDARIO*/
+
   .periodo-afastamento {
     border: 1px solid #ddd;
     padding: 20px;
@@ -147,3 +148,8 @@
     margin-top: 0.25rem;
     display: block;
   }
+
+
+  
+  
+  
