--- a/frontend/src/components/formulario.css
+++ b/frontend/src/components/formulario.css
@@ -85,6 +85,10 @@
   }
   
   /* Títulos */
+  main.container{
+    text-align: left;
+  }
+
   main.container h2 {
     text-align: center;
     margin-bottom: 2rem;
