pequena alteração no css para centralizar o botão cadastrar

--- a/frontend/src/components/layout-cruds.css
+++ b/frontend/src/components/layout-cruds.css
@@ -201,7 +201,7 @@
   .botoes-wrapper {
     display: flex;
     flex-direction: column; /* coloca um botão embaixo do outro */
-    align-items: flex-end; /* alinhar à esquerda */
+    align-items: center; /* centralizar */
     gap: 10px; /* espaço entre os botões */
     margin-bottom: 20px; /* espaço depois dos botões */
   }
