--- a/frontend/src/components/layout-cruds.css
+++ b/frontend/src/components/layout-cruds.css
@@ -187,6 +187,10 @@
     color: black;
   }
 
+  .icone-aprovar {
+    color: rgb(2, 104, 2);
+  }
+
   .input-error {
     border: 2px solid red;
     outline: none;
