--- a/frontend/src/components/UI/botoes/botao_cadastrar.css
+++ b/frontend/src/components/UI/botoes/botao_cadastrar.css
@@ -10,6 +10,8 @@
     width: 50px;
     height: 50px;
     color: var(--cor-branca);
+    border: none;
+    outline: none;
   }
   
   .botao-cadastrar:hover {
